# physux

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tmp.cmake  tmp2
lib/glad/glad/: glad.h
src/: glad.c  main.cpp  test.cpp  test3.cpp
src/core/: ShapeFactory.cpp  ShapeFactory.h  debug.h  loggable.cpp  loggable.h  particle.cpp  particle.h  renderable.cpp  renderable.h  shader.cpp  shader.h  tangible.cpp  tangible.h  triangle.h  util.cpp  util.h  v3d.h
src/gfx/: Global.cpp  Global.h  Global.hpp  RenderWindow.cpp  RenderWindow.h  callbacks.cpp
src/logging/: logger.cpp  logger.h
src/shaders/: basic.fs  basic.vs
